Hesaptan çıkış yap seçeneği eklendi

--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -25,5 +25,8 @@
         "weeksAgo": "{} weeks ago",
         "monthsAgo": "{} months ago",
         "yearsAgo": "{} years ago"
-    }
+    },
+    "yourProfile": "Your Profile",
+    "signOut": "Sign Out",
+    "waiting": "Waiting"
 }
