Profil bölümündeki blog seçme bölümü tamamlandı.

--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -14,6 +14,7 @@
     "search": "Search..",
     "noBlog": "You don't have a blog.",
     "chooseBlog": "Choose Your Blog",
+    "statistics": "Statistics",
     "continue": "Continue",
     "limitedBlogError": "This blog is limited for you.",
     "noPost": "This place looks empty",
