Profil bölümü tamamlandı

--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -29,5 +29,6 @@
     },
     "yourProfile": "Your Profile",
     "signOut": "Sign Out",
-    "waiting": "Waiting"
+    "waiting": "Waiting",
+    "comments": "Comments" 
 }
