yorumlar bölümü aksiyon butonları düzenlemesi

--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -35,5 +35,6 @@
     "inReplyTo": "In reply to someone",
     "approve": "Approve",
     "spam": "Spam",
-    "delete": "Delete"
+    "delete": "Delete",
+    "cancel": "Cancel"
 }
