preview sayfası oluşturuldu

--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -36,5 +36,6 @@
     "approve": "Approve",
     "spam": "Spam",
     "delete": "Delete",
-    "cancel": "Cancel"
+    "cancel": "Cancel",
+    "edit": "Edit"
 }
