--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -37,5 +37,6 @@
     "spam": "Spam",
     "delete": "Delete",
     "cancel": "Cancel",
-    "edit": "Edit"
+    "edit": "Edit",
+    "showMore": "Show More"
 }
