Editör bölümünde düzenlemeler yapıldı.

--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -43,6 +43,7 @@
     "enterPageTitle": "Enter a page title",
     "enterTitle": "Enter a title",
     "startWriting": "Start writing something for your blog 😊",
+    "startWritingHtml": "Start writing html for your blog 💪",
     "length": "Length",
     "imgUrl": "Image URL",
     "contentSettings": "Content Settings",
