--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -18,6 +18,7 @@
     "continue": "Continue",
     "limitedBlogError": "This blog is limited for you.",
     "noPost": "This place looks empty",
+    "updated": "updated {}",
     "dateTimeFormat": {
         "today": "today",
         "yesterday": "yesterday",
@@ -53,5 +54,9 @@
     "on": "ON",
     "off": "OFF",
     "convertToDraft": "Convert to Draft",
-    "schedulePost": "Schedule Post"
+    "schedulePost": "Schedule Post",
+    "saveSettings": "Save Settings",
+    "contentSaved": "Content Saved",
+    "contentPublished": "Content Published"
+
 }
