Küçük düzenlemeler yapıldı.

--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -58,6 +58,7 @@
     "saveSettings": "Save Settings",
     "contentSaved": "Content Saved",
     "contentPublished": "Content Published",
-    "copied": "Content url copied to the clipboard."
+    "copied": "Content url copied to the clipboard.",
+    "editorExitMsg": "The editor will be closed. Tap again to exit."
 
 }
