Logo ve Splash eklendi

--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -59,6 +59,6 @@
     "contentSaved": "Content Saved",
     "contentPublished": "Content Published",
     "copied": "Content url copied to the clipboard.",
-    "editorExitMsg": "The editor will be closed. Tap again to exit."
+    "editorExitMsg": "The editor will be closed.\nTap again to exit."
 
 }
